@@ -22,6 +22,11 @@ N3 & Turtle Writer
 Reasoners
     o Added rebindAll() to FBRuleInfGraph    
     o Extended OWLMini/full to include validation of maxCardinality(1) over individuals
+    o The (forward) deductions model is now preserved across rebind() operations 
+      so that listeners on deductions models are safe
+      
+Misc
+    o Extended ResourceFactory.createTypedLiteral to handle Calendar objects      
 
 ==== Jena 2.5.3
 
